crates/arrow-quiver/tests/compile_fail/unknown_attribute.stderr
error: Expected `non_null`, `name`, `metadata`, or `extra_columns`
 --> tests/compile_fail/unknown_attribute.rs:7:14
  |
7 |     #[quiver(nullable)]
  |              ^^^^^^^^
